--- a/src/EDA.ipynb
+++ b/src/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -95,8 +95,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 司机画像\n",
@@ -116,6 +118,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "320200    1000000\n",
+       "320500     881267\n",
+       "320100     580293\n",
+       "320600     516798\n",
+       "320800     511661\n",
+       "321000     273315\n",
+       "321300     243825\n",
+       "320700     237169\n",
+       "321100     237002\n",
+       "320300     228936\n",
+       "320400     217324\n",
+       "321200     214599\n",
+       "320900     209492\n",
+       "Name: city, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driver_call_logs.city.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -132,6 +167,47 @@
     "以及一段时长内司机app端行为次数\n",
     "例：\n",
     "call_cnt_3：3天内司机打电话数量\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(266212, 29)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# driver_portrait[['truck_no_city_id', 'install_city_short']]\n",
+    "driver_portrait[driver_portrait.truck_no_city_id == driver_portrait.install_city_short].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(343010, 29)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driver_portrait[driver_portrait.truck_no_city_id != driver_portrait.install_city_short].shape"
    ]
   },
   {
